update gitignore and added allure

--- a/.gitignore
+++ b/.gitignore
@@ -17,9 +17,9 @@ buildNumber.properties
 .project
 .settings
 test-output
-/resources/
-
+resources/*
+resources
 
 # project
-data.properties
-credentials.json
+/allure-results/*
+/allure-results
